<resources>
    <string name="app_name">Nietypowy Kalendarz</string>
    <string name="greeting_message">Witaj w aplikacji</string>
    <string name="login_button">Logowanie</string>
    <string name="register_button">Rejestracja</string>
    <string name="calendar_button">Kalendarz</string>
    <string name="settings_button">Ustawienia</string>
    <string name="show_password">Pokaż hasło</string>
    <string name="hide_password">Ukryj hasło</string>
    <string name="username_hint">Nazwa użytkownika</string>
    <string name="password_hint">Hasło</string>
    <string name="email_hint">Email</string>
    <string name="name_hint">Imię</string>
    <string name="surname_hint">Nazwisko</string>
    <string name="login_screen_title">Logowanie</string>"
    <string name="register_screen_title">Rejestracja</string>
    <string name="forgot_password_question">Nie pamiętasz hasła?</string>"
    <string name="back_button">Wróć</string>
    <string name="confirm_password_hint">Potwierdź hasło</string>
    <string name="back_to_login">Wróć do logowania</string>
    <string name="calendar_title">Kalendarz</string>
    <string name="previous_day">Poprzedni dzień</string>
    <string name="next_day">Następny dzień</string>
    <string name="date_placeholder">Wybierz datę</string>
    <string name="holidays_list">Lista świąt</string>
    <string name="add_to_favorites">Dodaj do ulubionych</string>
    <string name="app_description_content">Aplikacja jest częścią projektu pracy inżynierskiej, której celem jest stworzenie funkcjonalnego i estetycznego kalendarza z funkcją przeglądania świąt. Wszystkie informacje dotyczące świąt, ich nazw oraz szczegółowych opisów, zostały zaczerpnięte ze strony kalbi.pl, zapewniając ich rzetelność i aktualność.</string>
    <string name="profile">Profil</string>
    <string name="settings">Ustawienia</string>
    <string name="about">O aplikacji</string>
    <string name="exit">Wyjście</string>
    <string name="logout">Wyloguj</string>
    <string name="forgot_password">Resetowanie hasła</string>
    <string name="reset_password">Resetuj hasło</string>
    <string name="profile_picture">Zdjęcie profilu użytkownika</string>
    <string name="profile_name_and_surname">Imię i nazwisko</string>
    <string name="email_example">example@gmail.com</string>
    <string name="favorites">Ulubione</string>
    <string name="edit_profile">Edytuj profil</string>
    <string name="profile_bio">Opis użytkownika</string>
    <string name="color_settings">Wybierz kolorystykę aplikacji</string>
    <string name="light_theme">Jasny</string>
    <string name="dark_theme">Ciemny</string>
    <string name="vibrant_theme">Vibrant</string>
    <string name="notifications_settings">Ustawienia powiadomień</string>
    <string name="notification_time">Ustawiony czas powiadomień</string>
    <string name="save_button">Zapisz</string>
    <string name="search_date">Wyszukaj po dacie</string>
    <string name="cancel_button">Wyczyść powiadomienia</string>"
    <string name="notification_time_info">Notification Time: %s</string>
    <string name="sort_by_date">Sortuj po dacie</string>
    <string name="sort_alphabetically">Sortuj a-Z</string>
    <string name="sort_by_addition">Po dodaniu</string>
    <string name="sort_title">Sortowanie</string>
    <string name="edit_bio_hint">Możesz tutaj wpisać swój własny opis</string>
    <string name="upload_avatar">Zmień avatar</string>
    <string name="not_logged_in">Nie jesteś zalogowany</string>
    <string name="login">Zaloguj</string>
    <string name="profile_bio_hint">Dodaj swój własny opis</string>
    <string name="edit_bio">Edytuj opis</string>
    <string name="save_bio">Zapisz opis</string>
    <string name="days_until_placeholder">Dni do święta</string>
    <string name="holiday_today">Te święta są dzisiaj.</string>
    <string name="days_until_holiday">Za %1$d dni!</string>
    <string name="holiday_passed">Święto już minęło.</string>
    <string name="no_upcoming_holidays">Brak nadchodzących świąt dla wybranej daty.</string>
    <string name="error_calculating_days">Błąd podczas obliczania dni do święta.</string>
    <string name="search_name">Wyszukaj po nazwie</string>
    <string name="search_by_name">Wyszukaj po nazwie</string>
    <string name="enter_holiday_name">Wpisz nazwę święta</string>
    <string name="search_holiday">Wyszukaj święta</string>
    <string name="holiday_not_found">Nie znaleziono święta</string>
    <string name="no_holiday_named">Nie istnieje święto o nazwie "%1$s".</string>
    <string name="search">Wyszukaj</string>
    <string name="cancel">Cofnij</string>
    <string name="ok">OK</string>
    <string name="set_reminder">Ustaw przypomnienie</string>
    <string name="profile_info_placeholder">Informacje o koncie</string>
    <string name="profile_stats">Liczba polubionych świąt: %d</string>
    <string name="profile_creation_date">Konto stworzone: %s</string>
    <string name="link1_text">Jeśli szukasz więcej informacji odwiedź stronę kalbi.pl</string>
    <string name="link2_text">Podoba ci się aplikacja? Wesprzyj szczytny cel</string>
    <string name="no_notification_time_set">Nie ustawiono czasu powiadomienia</string>
    <string name="app_logo_desc">splash screen logo</string>


</resources>