<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:background="?attr/colorPrimary">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:title="@string/app_name"
        android:titleTextColor="@attr/colorAccent" />

    <!-- Zdjęcie profilowe -->
    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profile_picture"
        android:src="@drawable/baseline_person_24"
        android:scaleType="centerCrop" />

    <!-- Imię i nazwisko użytkownika -->
    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/profile_name_and_surname"
        android:textColor="?android:attr/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Adres e-mail użytkownika -->
    <TextView
        android:id="@+id/profileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/email_example"
        android:textColor="?android:attr/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/profileBio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileEmail"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:text="@string/profile_bio"
        android:textColor="?android:attr/colorAccent"
        android:textSize="16sp" />

    <!-- Przycisk: Pokaż ulubione -->
    <Button
        android:id="@+id/showFavoritesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileBio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        android:backgroundTint="?android:attr/colorAccent"
        android:text="@string/favorites"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold" />

    <!-- Przycisk edycji profilu -->
    <Button
        android:id="@+id/editProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/showFavoritesButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:padding="12dp"
        android:backgroundTint="?android:attr/colorAccent"
        android:text="@string/edit_profile"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold" />

    <!-- Przycisk wylogowania -->
    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:padding="12dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:maxWidth="300dp"
        android:backgroundTint="@color/red_primary"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>
