<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="?attr/colorPrimary">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/login_screen_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="?android:attr/colorAccent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="480dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLogin"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/email_hint"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:backgroundTint="?android:attr/colorAccent"
        android:textColorHint="?android:attr/textColorPrimary"
        android:textColor="?android:attr/textColorPrimary" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="480dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/password_hint"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:backgroundTint="?android:attr/colorAccent"
        android:textColorHint="?android:attr/textColorPrimary"
        android:textColor="?android:attr/textColorPrimary" />

    <ImageView
        android:id="@+id/showPasswordIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_below="@+id/etEmail"
        android:layout_alignEnd="@id/etPassword"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/show_password"
        android:src="@drawable/baseline_visibility_24" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="?android:attr/colorAccent"
        android:text="@string/login_button"
        android:textColor="?android:attr/textColorPrimary" />

    <Button
        android:id="@+id/btnGoToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="?android:attr/colorAccent"
        android:text="@string/register_button"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnGoToRegister"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_password_question"
        android:textColor="?android:attr/colorAccent"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnReturnToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvForgotPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="?android:attr/colorAccent"
        android:text="@string/back_button"
        android:textColor="?android:attr/textColorPrimary" />
</RelativeLayout>
