<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="?attr/colorPrimary">

    <!-- Tytuł ekranu -->
    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/register_screen_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="?android:attr/colorAccent" />

    <!-- Pole Imię -->
    <EditText
        android:id="@+id/etName"
        android:layout_width="480dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvRegister"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/name_hint"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:backgroundTint="?android:attr/colorAccent"
        android:textColorHint="?android:attr/textColorPrimary"
        android:textColor="?android:attr/textColorPrimary" />

    <!-- Pole Email -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="480dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etName"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/email_hint"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:backgroundTint="?android:attr/colorAccent"
        android:textColorHint="?android:attr/textColorPrimary"
        android:textColor="?android:attr/textColorPrimary" />

    <!-- Pole Hasło -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="480dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/password_hint"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:backgroundTint="?android:attr/colorAccent"
        android:textColorHint="?android:attr/textColorPrimary"
        android:textColor="?android:attr/textColorPrimary" />

    <!-- Ikona ukrycia/pokazania hasła -->
    <ImageView
        android:id="@+id/showPasswordIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_below="@id/etEmail"
        android:layout_alignEnd="@id/etPassword"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/show_password"
        android:src="@drawable/baseline_visibility_24" />

    <!-- Pole Potwierdzenie Hasła -->
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="480dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/confirm_password_hint"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:backgroundTint="?android:attr/colorAccent"
        android:textColorHint="?android:attr/textColorPrimary"
        android:textColor="?android:attr/textColorPrimary" />

    <!-- Ikona ukrycia/pokazania hasła potwierdzenia -->
    <ImageView
        android:id="@+id/showConfirmPasswordIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_below="@id/etPassword"
        android:layout_alignEnd="@id/etConfirmPassword"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/show_password"
        android:src="@drawable/baseline_visibility_24" />

    <!-- Przycisk Zarejestruj -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etConfirmPassword"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:backgroundTint="?android:attr/colorAccent"
        android:text="@string/register_button"
        android:textColor="?android:attr/textColorPrimary" />

    <!-- Przycisk Wróć do logowania -->
    <Button
        android:id="@+id/btnReturnToLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etConfirmPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="?android:attr/colorAccent"
        android:text="@string/back_to_login"
        android:textColor="?android:attr/textColorPrimary" />
</RelativeLayout>
