<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="?attr/colorPrimary">

    <!-- Tytuł strony -->
    <TextView
        android:id="@+id/tvResetPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/forgot_password"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="?android:attr/textColorPrimary" />

    <!-- Pole na e-mail -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="480dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvResetPasswordTitle"
        android:layout_marginTop="16dp"
        android:hint="@string/email_hint"
        android:autofillHints="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:backgroundTint="?android:attr/colorAccent"
        android:textColorHint="?android:attr/textColorPrimary"
        android:textColor="?android:attr/textColorPrimary" />

    <!-- Przycisk resetowania hasła -->
    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_marginTop="16dp"
        android:padding="12dp"
        android:maxWidth="300dp"
        android:backgroundTint="?attr/colorAccent"
        android:text="@string/reset_password"
        android:textColor="?android:attr/textColorPrimary" />

</RelativeLayout>
